--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h3>My Github</h3>
             <p>My Github account with all of my projects</p>
             <div class="links">
-              <a href="https://musairul.github.io/admin-dashboard">link</a>
+              <a href="https://github.com/musairul/">link</a>
             </div>
           </div>
         </div>
